# api/api.pb.gw.go
@@ -250,14 +250,14 @@ func request_GuardRailsService_TriggerScanRepository_0(ctx context.Context, mars
 		_   = err
 	)
 
-	val, ok = pathParams["repo_id"]
+	val, ok = pathParams["id"]
 	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "repo_id")
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "id")
 	}
 
-	protoReq.RepoId, err = runtime.Uint32(val)
+	protoReq.Id, err = runtime.Uint32(val)
 	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "repo_id", err)
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "id", err)
 	}
 
 	msg, err := client.TriggerScanRepository(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
@@ -276,14 +276,14 @@ func local_request_GuardRailsService_TriggerScanRepository_0(ctx context.Context
 		_   = err
 	)
 
-	val, ok = pathParams["repo_id"]
+	val, ok = pathParams["id"]
 	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "repo_id")
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "id")
 	}
 
-	protoReq.RepoId, err = runtime.Uint32(val)
+	protoReq.Id, err = runtime.Uint32(val)
 	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "repo_id", err)
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "id", err)
 	}
 
 	msg, err := server.TriggerScanRepository(ctx, &protoReq)
@@ -454,7 +454,7 @@ func RegisterGuardRailsServiceHandlerServer(ctx context.Context, mux *runtime.Se
 		var stream runtime.ServerTransportStream
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/operation.olympus.service.GuardRailsService/TriggerScanRepository", runtime.WithHTTPPathPattern("/api/v1/repositories/{repo_id}/scans"))
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/operation.olympus.service.GuardRailsService/TriggerScanRepository", runtime.WithHTTPPathPattern("/api/v1/repositories/{id}/scans"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -639,7 +639,7 @@ func RegisterGuardRailsServiceHandlerClient(ctx context.Context, mux *runtime.Se
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/operation.olympus.service.GuardRailsService/TriggerScanRepository", runtime.WithHTTPPathPattern("/api/v1/repositories/{repo_id}/scans"))
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/operation.olympus.service.GuardRailsService/TriggerScanRepository", runtime.WithHTTPPathPattern("/api/v1/repositories/{id}/scans"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -689,7 +689,7 @@ var (
 
 	pattern_GuardRailsService_RemoveRepository_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"api", "v1", "repositories", "id"}, ""))
 
-	pattern_GuardRailsService_TriggerScanRepository_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3, 2, 4}, []string{"api", "v1", "repositories", "repo_id", "scans"}, ""))
+	pattern_GuardRailsService_TriggerScanRepository_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3, 2, 4}, []string{"api", "v1", "repositories", "id", "scans"}, ""))
 
 	pattern_GuardRailsService_ListResult_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "results"}, ""))
 )
